feat: sql push down

--- a/vannaai/.env
+++ b/vannaai/.env
@@ -1,5 +1,6 @@
 # set your OpenAI api key
 OPENAI_API_KEY=
 
-PG_CONNECTION_STRING=postgres://demo_pg_user:demo_pg_pass@synmetrix:15432/db
+PG_CONNECTION_STRING=postgres://demo_clickhouse_user:demo_clickhouse_pass@synmetrix:15432/db
 QDRANT_URL=http://qdrant:6333
+CUBESQL_SQL_PUSH_DOWN=true
