--- a/vannaai/.chainlit/config.toml
+++ b/vannaai/.chainlit/config.toml
@@ -2,6 +2,8 @@
 # Whether to enable telemetry (default: true). No personal data is collected.
 enable_telemetry = false
 
+# Database to use for the app
+database = "local"
 
 # List of environment variables to be provided by each user to use the app.
 user_env = []
@@ -33,7 +35,7 @@ auto_tag_thread = true
 
 # Authorize users to spontaneously upload files with messages
 [features.spontaneous_file_upload]
-    enabled = true
+    enabled = false
     accept = ["*/*"]
     max_files = 20
     max_size_mb = 500
