--- a/vannaai/.env
+++ b/vannaai/.env
@@ -3,4 +3,6 @@ OPENAI_API_KEY=
 
 PG_CONNECTION_STRING=postgres://demo_clickhouse_user:demo_clickhouse_pass@synmetrix:15432/db
 QDRANT_URL=http://qdrant:6333
+CUBESTORE_VERSION=v0.35.33-arm64v8
 CUBESQL_SQL_PUSH_DOWN=true
+CHAINLIT_AUTH_SECRET="yFtTf%>n6jN%~pn6MbO*aUS9CGbwp1w1vuO0h=Q10,tO4BK:HF5lK_v~GE2wu^5U"
